@@ -1,2 +1,3 @@
+cluster.name: testCluster
 stats.enabled: false
 psql.enabled: false
