@@ -20,3 +20,6 @@ Changes
 
 Fixes
 =====
+
+ - Fixed an issue that caused ``cluster.name`` setting in ``crate.yml`` file
+   to be ignored.
